# pipeop

./: ASSIGNMENT.md  CMakeLists.txt  main.cpp  test_main.cpp
include/: pipeop.hpp
src/: pipeop.cpp
tests/: pipeop_tests.cpp
